--- a/extraCss.css
+++ b/extraCss.css
@@ -1,3 +1,10 @@
+/*
+
+ Created by Zachariah Albers on 7/14/18.
+ Copyright © 2018 Zachariah Albers. All rights reserved.
+
+ */
+
 .hideFromView {
   visibility: hidden;
   opacity: 0;
