--- a/extraCss.css
+++ b/extraCss.css
@@ -17,14 +17,23 @@
   transition: visibility 0s 0.2s, opacity 0.2s linear;
 }
 
+.noBullets{
+  list-style-type: none;
+  font-family: 'Orbitron', sans-serif;
+}
+
 #currently-Selected-Tab{
-  color: #07C0CC;
+  color: #3783B3;
   border-color: #07C0CC;
 }
 
+
+
 .mainTextColor{
-  color: #07C0CC;
+  color: #3783B3;
   border-color: #07C0CC;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 400;
 }
 
 .secondaryTextColor{
@@ -39,6 +48,14 @@
 
 .card-body{
   cursor: pointer;
+}
+
+.card-title {
+  font-family: 'Russo One', sans-serif;
+}
+
+h4 {
+  font-family: 'Russo One', sans-serif;
 }
 
 a {
@@ -58,10 +75,10 @@ a {
   float: right;
 }
 
-#cpsc581-Button {
+/* #cpsc581-Button {
   color: #FFB422 !important;
 
-}
+} */
 
 
 
